deepcode.ai suggestions applied